kuber/manifest/pod-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  labels:
    run: busybox
spec:
  containers:
    - name: busybox
      image: repo.local/busybox
